# spam_classifier

./: .gitignore  README.md  pyproject.toml
notebooks/: spam_classifier.ipynb
src/spam_classifier/: constants.py  mail_class.py
