[project]
name = "spam-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pathlib>=1.0.1",
    "polars>=1.32.0",
    "scikit-learn>=1.7.1",
    "urlextract>=1.9.0",
]
